out/old/manifests/shift-handover/Deployment.shift-handover-frontend.yaml
metadata:
  name: shift-handover-frontend
  namespace: shift-handover
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"shift-handover:frontend","ingressName":"shift-handover:shift-handover-ingress","hostname":"shift-handover.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shift-handover-frontend
  template:
    metadata:
      labels:
        app: shift-handover-frontend
    spec:
      containers:
      - name: shift-handover-fe
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/shift-handover/frontend/main:8
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
apiVersion: apps/v1
kind: Deployment
