out/old/manifests/shift-handover/StatefulSet.shift-handover-backend.yaml
metadata:
  name: shift-handover-backend
  namespace: shift-handover
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"shift-handover:backend","ingressName":"shift-handover:shift-handover-ingress","hostname":"<DOMAIN_557>.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shift-handover-backend
  template:
    metadata:
      labels:
        app: shift-handover-backend
    spec:
      containers:
      - name: shift-handover-be
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/shift-handover/backend/main:10
        resources:
          limits:
            cpu: '1'
            memory: 1536Mi
          requests:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: shift-handover-image
          mountPath: /app/images
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: shift-handover-image
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 30Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: shift-handover-backend
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
