out/old/manifests/shift-handover/StatefulSet.shift-handover-mongo.yaml
metadata:
  name: shift-handover-mongo
  namespace: shift-handover
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shift-handover-mongo
  template:
    metadata:
      labels:
        app: shift-handover-mongo
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: mongodb-config
          defaultMode: 420
      containers:
      - name: mongodb
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/fb360/base-images/mongo:6.0.5
        ports:
        - name: mongodb
          containerPort: 27017
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 1536Mi
          requests:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: shift-handover-storage
          mountPath: /data/db/
        - name: config-volume
          mountPath: /etc/<DOMAIN_759>
          subPath: <DOMAIN_759>
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: <CLEANUP_HOST_5>
      securityContext: {}
      imagePullSecrets:
      - name: secret-registry-image
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: shift-handover-storage
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 30Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: shift-handover-mongo
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
