out/old/manifests/shift-handover/Service.backend.yaml
metadata:
  name: backend
  namespace: shift-handover
spec:
  ports:
  - name: backend-port
    protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: shift-handover-backend
  clusterIP: <IP_106>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
