out/old/manifests/shift-handover/Service.mongodb.yaml
metadata:
  name: mongodb
  namespace: shift-handover
spec:
  ports:
  - name: sec-mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: shift-handover-mongo
  clusterIP: <IP_108>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
